# django-vue-docker

./: README.md  docker-compose.yml
djangoback/: Dockerfile  pyproject.toml
djangoback/djangoback/: .env.example  app.yaml  requirements.txt  settings.py  urls.py
djangoback/djangoback/core/: models.py  serializers.py  views.py
djangoback/djangoback/core/migrations/: 0001_initial.py  0002_auto_20200610_1538.py
front-vue/: Dockerfile
front-vue/app/: .env  package-lock.json  package.json
front-vue/app/src/: App.vue
front-vue/app/src/components/: EventsCreate.vue  EventsList.vue
front-vue/app/src/plugins/: vuetify.js
